--- a/shellevents/Makefile
+++ b/shellevents/Makefile
@@ -2,6 +2,9 @@ DESTDIR ?= /
 PREFIX ?= $(DESTDIR)usr/local
 EXEC_PREFIX ?= $(PREFIX)
 BINDIR ?= $(EXEC_PREFIX)/bin
+all: 
+	$(shell chmod +x ${THIS_DIR}shellevents)
+
 
 install: shellevents shellevents_default.sh
 	@install -v -D -m 0755 shellevents shellevents_default.sh --target-directory "$(BINDIR)"
