--- a/hyprpm.toml
+++ b/hyprpm.toml
@@ -2,10 +2,7 @@
 name = "hyprland-plugins"
 authors = ["Vaxry","Misterio77","Schweber","fufexan","schievel2","trippwill"]
 
-commit_pins = [
-    ["3bb9c7c5cf4f2ee30bf821501499f2308d616f94", "38309cd742b25b9e21689f0fc09136948ca2e6f9"],
-    ["d74607e414dcd16911089a6d4b6aeb661c880923", "38309cd742b25b9e21689f0fc09136948ca2e6f9"]
-]
+commit_pins = []
 
 [grimblast]
 description = "A Hyprland version of Grimshot"
